Setter minnehåndteringsflagg.